--- a/docs/自宅サーバーの保守手順.md
+++ b/docs/自宅サーバーの保守手順.md
@@ -12,7 +12,7 @@
    sudo apt update
    ```
 
-1. パッケージのアップグレードが可能なものを確認
+1. アップグレード可能なパッケージを確認し、内容に問題がなければ次のステップへ進む
 
    ```sh
    sudo apt list --upgradable
@@ -24,10 +24,33 @@
    sudo apt upgrade -y
    ```
 
+1. 不要な依存パッケージを削除
+
+   ```sh
+   sudo apt autoremove -y
+   ```
+
+1. 失敗しているサービスがないか確認し、問題があれば原因を調査する
+
+   ```sh
+   systemctl list-units --failed
+   ```
+
+1. 再起動が必要か確認する
+
+   ```sh
+   ls /var/run/reboot-required 2>/dev/null && echo "再起動が必要です" || echo "再起動は不要です"
+   ```
+
+   再起動が必要な場合は次のステップへ進む。不要な場合はスキップして完了。
+
 1. サーバーの再起動
 
    ```sh
    sudo reboot
    ```
 
-1. Discord の `monitor` チャンネルに起動完了通知が飛んできたら再起動が完了
+1. Discord の `monitor` チャンネルに起動完了通知が届いたら再起動完了
+
+   - 通知が **10 分経っても届かない**場合は、サーバーに異常が発生している可能性がある
+   - コンソールや他の手段でサーバーの状態を確認し、必要に応じて手動で電源を操作する
